modified:   pages/about.html 	modified:   pages/main.html 	modified:   pages/recipe.html 	modified:   pages/week.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,9 @@
     </nav>
 
     <main>
-
+        <section class="text">
+            <p>Here is some text about the website</p>
+        </section>
     </main>
 
     <footer>
