--- a/pages/main.html
+++ b/pages/main.html
@@ -24,7 +24,7 @@
     </nav>
 
     <main>
-        <section id="text">
+        <section class="text">
             Here is some text explaining how to use this site
         </section>
         <section id="randomRecipe">
