--- a/pages/recipe.html
+++ b/pages/recipe.html
@@ -24,7 +24,9 @@
     </nav>
 
     <main>
-
+        <section id="recipe">
+            This is were the complete recipe go
+        </section>
     </main>
 
     <footer>
