--- a/pages/week.html
+++ b/pages/week.html
@@ -24,7 +24,12 @@
     </nav>
 
     <main>
-
+        <section class="text">
+            Here is some text explaining how to use this site
+        </section>
+        <section id="weekRandomRecipe">
+            This is were the recipes for the week go
+        </section>
     </main>
 
     <footer>
